syntax = "proto3";

package taxonomy;
import "model/protos/taxonomy.proto";
import "model/protos/core.proto";
import "model/protos/artifact.proto";

option csharp_namespace = "TTI.TTF.Taxonomy";
option java_package = "org.tti.ttf.taxonomy";
option java_multiple_files = true;

//Taxonomy Service - Create, Read, Update, Delete for the Taxonomy Object Model
service Service {
    
    //Get the a complete TOM in a single request. Preferred method for applications when the TOM is local.
    rpc GetFullTaxonomy (taxonomy.model.TaxonomyVersion) returns (taxonomy.model.Taxonomy) {} 

    //Get a partial TOM with references only to artifacts.
    rpc GetLiteTaxonomy (taxonomy.model.TaxonomyVersion) returns (taxonomy.model.Taxonomy) {} 
    
    //Get a Token Base artifact by Id.
    rpc GetBaseArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.Base) {} 

    //Get a Behavior by Id.
    rpc GetBehaviorArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.Behavior) {} 

    //Get a BehaviorGroup by Id.
    rpc GetBehaviorGroupArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.BehaviorGroup) {} 

    //Get a PropertySet by Id.
    rpc GetPropertySetArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.PropertySet) {} 

    //Get a TemplateFormula by Id.
    rpc GetTemplateFormulaArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.TemplateFormula) {} 

    //Get a TemplateDefinition by Id.
    rpc GetTemplateDefinitionArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.TemplateDefinition) {} 

    //Get a Token Template by TokenDefinition.Id.
    rpc GetTokenTemplate (taxonomy.model.artifact.TokenTemplateId) returns (taxonomy.model.core.TokenTemplate) {} 

    // Get a Token Specification by TokenDefinition.Id.
    rpc GetTokenSpecification (taxonomy.model.artifact.TokenTemplateId) returns (taxonomy.model.core.TokenSpecification) {} 
   
    //Get artifacts by type using query options.
    rpc GetArtifactsOfType (taxonomy.model.artifact.QueryOptions) returns (taxonomy.model.artifact.QueryResult) {} 

    //Initialize a new artifact object and return it for updating. Assigns a unique identifier for the type.
    rpc InitializeNewArtifact (taxonomy.model.artifact.InitializeNewArtifactRequest) returns (taxonomy.model.artifact.InitializeNewArtifactResponse) {} 
    
    //Submit a newly created artifact object to be saved.
    rpc CreateArtifact (taxonomy.model.artifact.NewArtifactRequest) returns (taxonomy.model.artifact.NewArtifactResponse) {} 

    //Submit an updated artifact object to be saved.
    rpc UpdateArtifact (taxonomy.model.artifact.UpdateArtifactRequest) returns (taxonomy.model.artifact.UpdateArtifactResponse) {} 

    //Delete an artifact by Id.
    rpc DeleteArtifact (taxonomy.model.artifact.DeleteArtifactRequest) returns (taxonomy.model.artifact.DeleteArtifactResponse) {} 

    //Create a TemplateDefinition from a TemplateFormula.
    rpc CreateTemplateDefinition (taxonomy.model.artifact.NewTemplateDefinition) returns (taxonomy.model.core.TemplateDefinition) {} 

    //Issue a commit for updates made to the local git.
    rpc CommitLocalUpdates(taxonomy.model.artifact.CommitUpdatesRequest) returns (taxonomy.model.artifact.CommitUpdatesResponse) {} 

    //Issue a pull request from the local clone to the global source.
    rpc PullRequest(taxonomy.model.artifact.IssuePullRequest) returns (taxonomy.model.artifact.IssuePullResponse){} 

    //Retrieve service configuration.
    rpc GetConfig(taxonomy.model.artifact.ConfigurationRequest) returns (taxonomy.model.artifact.ServiceConfiguration) {} 
}

